pre ~ [Link Bug Fixes] - adding target=_blank to external links

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <section class="head bg">
       <div role="doc-subtitle">Hi, my name is</div>
-      <a href="/docs/resume/resume_1-22.pdf"><h1 class="myName">Sergio Garcia Gallego</h1></a>
+      <a href="/docs/resume/resume_1-22.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
       <h2 class="myJob">and I help build the web.</h2>
       <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
       <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
@@ -121,7 +121,7 @@
         <div class="longDesc">
           <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design & UX is involved.</p>
           <p>My magnet towards computing began at a young age, when the only way for me to install Minecraft was through a battered laptop running Fedora Linux 18. The challenge of using Xterm to install any application taunted me to learn more I guess.</p>
-          <p>Fast forward to 2020, and I have had the pleasure to work at <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer" class="outLink">a start-up</a> and have allowed the opportunity for a bit of <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer" class="outLink">freelancing</a> as well.</p>
+          <p>Fast forward to 2020, and I have had the pleasure to work at <a href="https://vasaveop.com/" target="_blank" rel="noreferrer" class="outLink">a tech start-up</a> and have allowed the opportunity for a bit of <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer" class="outLink">freelancing</a> as well.</p>
           <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
@@ -156,7 +156,7 @@
         </div>
         <div class="card">
           <div role="doc-subtitle" class="date">Sep 20 - Dec 21</div>
-          <h4>Apprentice Frontend Web Dev <span class="stylechar">@</span> <a href="https://vasavebusiness.com" target="_blank" rel="noreferrer">Vasave</a></h4>
+          <h4>Apprentice Frontend Web Dev <span class="stylechar">@</span> <a href="https://vasaveop.com/" target="_blank" rel="noreferrer">Vasave</a></h4>
           <ul class="rolePoints">
             <li>Actively worked collaboratively on in house & client projects.</li>
             <li>Maintained & built production-level code via modern approaches to achieve set goals.</li>
