--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="twitter:site" content="https://iamsergio.dev" />
     <meta name="twitter:title" content="Sergio Garcia Gallego" />
     <meta name="twitter:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences." />
-    <meta name="twitter:image" content="https://iamsergio.dev/web-thumbnail.png" />
+    <meta name="twitter:image" content="https://iamsergio.dev/assets/img/web-thumbnail.png" />
 
     <!-- Character Set -->
     <meta charset="UTF-8" />
@@ -42,13 +42,13 @@
 
     <!-- Site Favicon -->
     <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/assets/img/favicon/favicon-48x48.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#707070">
+    <link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#707070">
     <meta name="msapplication-TileColor" content="#729bac">
     <meta name="theme-color" content="#ffffff">
 
@@ -66,9 +66,9 @@
 
     <!-- Internal Links -->
     <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/css/scrollbar.css">
-    <link rel="stylesheet" href="/css/responsive.css">
-    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/scrollbar.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
 
     <!-- External Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -84,19 +84,19 @@
 
     <nav class="fixedtop">
       <ul class="left">
-        <li><a href="#"><img src="/logo.png" alt="Site Logo"></a></li>
+        <li><a href="#"><img src="/assets/img/logo/logo.png" alt="Site Logo"></a></li>
       </ul>
       <ul class="right mono">
         <li><i>01.</i><a href="#about">About</a></li>
         <li><i>02.</i><a href="#experience">Experience</a></li>
         <li><i>03.</i><a href="#contact">Contact</a></li>
-        <li><a href="/docs/resume/resume_1-22.pdf" target="_blank" id="last">Resume</a></li>
+        <li><a href="/assets/docs/resume/resume_1-22.pdf" target="_blank" id="last">Resume</a></li>
       </ul>
     </nav>
 
     <section class="head bg">
       <div role="doc-subtitle">Hi, my name is</div>
-      <a href="/docs/resume/resume_1-22.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
+      <a href="/assets/docs/resume/resume_1-22.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
       <h2 class="myJob">and I help build the web.</h2>
       <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
       <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
@@ -104,11 +104,11 @@
 
     <div class="inline">
       <ul class="social">
-        <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="/img/icons8-github-50px.png" alt="GitHub account"></li>
-        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/img/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
-        <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><img src="/img/icons8-donate-50px.png" alt="Donations"></a></li>
-        <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/img/icons8-instagram-50px.png" alt="Instagram account"></a></li>
-        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/img/icons8-twitter-50px.png" alt="Twitter account" id="last"></a></li>
+        <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="/assets/img/icon/icons8-github-50px.png" alt="GitHub account"></li>
+        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/assets/img/icon/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
+        <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><img src="/assets/img/icon/icons8-donate-50px.png" alt="Donations"></a></li>
+        <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/assets/img/icon/icons8-instagram-50px.png" alt="Instagram account"></a></li>
+        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/assets/img/icon/icons8-twitter-50px.png" alt="Twitter account" id="last"></a></li>
       </ul>
     </div>
 
@@ -125,16 +125,16 @@
           <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
-            <li><img src="/img/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
-            <li><img src="/img/icons8-css3-50px.png" alt="CSS3" title="CSS3"></li>
-            <li><img src="/img/icons8-sass-50px.png" alt="SASS" title="SASS"></li>
-            <li><img src="/img/icons8-javascript-50px.png" alt="JavaScript (ES6+)" title="JavaScript (ES6+)"></li>
-            <li><img src="/img/icons8-reactjs-50px.png" alt="React.js" title="React.js"></li>
-            <li><img src="/img/icons8-git-50px.png" alt="Git" title="Git"></li>
+            <li><img src="/assets/img/icon/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
+            <li><img src="/assets/img/icon/icons8-css3-50px.png" alt="CSS3" title="CSS3"></li>
+            <li><img src="/assets/img/icon/icons8-sass-50px.png" alt="SASS" title="SASS"></li>
+            <li><img src="/assets/img/icon/icons8-javascript-50px.png" alt="JavaScript (ES6+)" title="JavaScript (ES6+)"></li>
+            <li><img src="/assets/img/icon/icons8-reactjs-50px.png" alt="React.js" title="React.js"></li>
+            <li><img src="/assets/img/icon/icons8-git-50px.png" alt="Git" title="Git"></li>
           </ul>
         </div>
         <div class="myPic">
-          <img src="/img/myPic.jpg" alt="This is a Picture of me!">
+          <img src="/assets/img/myPic.jpg" alt="This is a Picture of me!">
         </div>
       </div>
     </section>
