pre ~ 01.02.22 @ 22:45PM - [small text change] - 2020 replaced with 2022

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
 
     <!-- Web Thumbnail Stuff -->
-    <meta property="og:image" content="https://iamsergio.dev/web-thumbnail.png" />
+    <meta property="og:image" content="https://iamsergio.dev/assets/img/web-thumbnail.png" />
     <meta property="og:title" content="Sergio Garcia Gallego" />
     <meta property="og:description" content="Sergio is a Junior Frontend Developer specializing in all technologies necessary to build spectacular web experiences." />
     <meta property="og:url" content="https://iamsergio.dev" />
