--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section class="head bg">
       <div role="doc-subtitle">Hi, my name is</div>
       <a href="/assets/docs/resume/resume_1-22.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
-      <h2 class="myJob">and I help build the web.</h2>
+      <h2 class="myJob">and <span id="typewriter"></span></h2>
       <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
       <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
     </section>
@@ -191,6 +191,9 @@
     <footer class="allContact">
       <p>Build & Design by <a href="mailto:gallegogarciasergio@gmail.com"><span class="copyright"></span> Sergio Garcia</a> | Icons  by <a href="https://icons8.com" target="_blank">Icons8</a></p>
     </footer>
+
+    <!-- TypeWriter JS -->
+    <script src="/assets/js/typewriter.js"></script>
 
   </body>
 </html>
