pre ~ 03.02.22 @ 11:25AM | [Landing Viewport Height Adjustments] - Only sections I want seen on load will appear, scroll to see more content as intended previously for all devices]

--- a/index.html
+++ b/index.html
@@ -95,22 +95,23 @@
     </nav>
 
     <section class="head bg">
-      <div role="doc-subtitle">Hi, my name is</div>
-      <a href="/assets/docs/resume/resume_1-22.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
-      <h2 class="myJob">and <span id="typewriter"></span></h2>
-      <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
-      <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
+      <main class="landing">
+        <div role="doc-subtitle">Hi, my name is</div>
+        <a href="/assets/docs/resume/resume_1-22.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
+        <h2 class="myJob">and <span id="typewriter"></span></h2>
+        <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
+        <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
+      </main>
+      <div class="inline">
+        <ul class="social">
+          <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="/assets/img/icon/icons8-github-50px.png" alt="GitHub account"></li>
+          <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/assets/img/icon/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
+          <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><img src="/assets/img/icon/icons8-donate-50px.png" alt="Donations"></a></li>
+          <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/assets/img/icon/icons8-instagram-50px.png" alt="Instagram account"></a></li>
+          <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/assets/img/icon/icons8-twitter-50px.png" alt="Twitter account" id="last"></a></li>
+        </ul>
+      </div>
     </section>
-
-    <div class="inline">
-      <ul class="social">
-        <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="/assets/img/icon/icons8-github-50px.png" alt="GitHub account"></li>
-        <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/assets/img/icon/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
-        <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><img src="/assets/img/icon/icons8-donate-50px.png" alt="Donations"></a></li>
-        <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/assets/img/icon/icons8-instagram-50px.png" alt="Instagram account"></a></li>
-        <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/assets/img/icon/icons8-twitter-50px.png" alt="Twitter account" id="last"></a></li>
-      </ul>
-    </div>
 
     <a name="about"></a>
     <section class="about">
