--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <li><i>01.</i><a href="#about">About</a></li>
         <li><i>02.</i><a href="#experience">Experience</a></li>
         <li><i>03.</i><a href="#contact">Contact</a></li>
-        <li><a href="/assets/docs/resume/resume_1-22.pdf" target="_blank" id="last">Resume</a></li>
+        <li><a href="/assets/docs/resume/resume[3-22].pdf" target="_blank" id="last">Resume</a></li>
       </ul>
     </nav>
 
