--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
         <li><i>01.</i><a href="#about">About</a></li>
         <li><i>02.</i><a href="#experience">Experience</a></li>
         <li><i>03.</i><a href="#contact">Contact</a></li>
-        <li><a href="/assets/docs/resume/resume[3-22].pdf" target="_blank" id="last">Resume</a></li>
+        <li><a href="/assets/docs/resume/resume.pdf" target="_blank" id="last">Resume</a></li>
       </ul>
     </nav>
 
     <section class="head bg">
       <main class="landing">
         <div role="doc-subtitle">Hi, my name is</div>
-        <a href="/assets/docs/resume/resume_1-22.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
+        <a href="/assets/docs/resume/resume.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
         <h2 class="myJob">and <span id="typewriter"></span><span class="blink"></span></h2>
         <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
         <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
