--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
       <div class="timeline">
         <div class="card">
-          <div role="doc-subtitle" class="date">Jan 22 - Present</div>
+          <div role="doc-subtitle" class="date">Jan22 - Present</div>
           <h4>Junior Frontend Dev & TA <span class="stylechar">@</span> <a href="https://purplebeard.co.uk" target="_blank" rel="noreferrer">PurpleBeard Training ltd.</a></h4>
           <ul class="rolePoints">
             <li>Working closely with inter-disciplinary teams to achieve set goals.</li>
@@ -156,7 +156,7 @@
           </ul>
         </div>
         <div class="card">
-          <div role="doc-subtitle" class="date">Sep 20 - Dec 21</div>
+          <div role="doc-subtitle" class="date">Sep20 - Dec21</div>
           <h4>Apprentice Frontend Web Dev <span class="stylechar">@</span> <a href="https://vasaveop.com/" target="_blank" rel="noreferrer">Vasave</a></h4>
           <ul class="rolePoints">
             <li>Actively worked collaboratively on in house & client projects.</li>
@@ -195,6 +195,7 @@
 
     <!-- TypeWriter JS -->
     <script src="/assets/js/typewriter.js"></script>
+    <!-- Tidio Chat (until custom ChatBot complete) -->
 
   </body>
 </html>
