--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section class="head bg">
       <main class="landing">
         <div role="doc-subtitle">Hi, my name is</div>
-        <a href="/assets/docs/resume/resume.pdf" target="_blank"><h1 class="myName">Sergio Garcia Gallego</h1></a>
+        <h1 class="myName"><a href="/assets/docs/resume/resume.pdf" target="_blank">Sergio Garcia Gallego</a></h1>
         <h2 class="myJob">and <span id="typewriter"></span><span class="blink"></span></h2>
         <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
         <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
