--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Site Favicon -->
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="/assets/img/favicon/favicon.svg">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="/assets/img/favicon/favicon-48x48.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#707070">
-    <meta name="msapplication-TileColor" content="#729bac">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="/assets/img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Site Author -->
@@ -73,42 +72,46 @@
     <!-- External Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+
+    <!-- Icon Package -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    
   </head>
   <body>
 
     <nav class="fixedtop">
       <ul class="left">
-        <li><a href="#"><img src="/assets/img/logo/logo.png" alt="Site Logo"></a></li>
+        <li><a href="#"><svg width="65" height="65" viewBox="0 0 71 71" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M7.07107 42.4264C3.16582 38.5212 3.16583 32.1895 7.07107 28.2843L28.2843 7.07108C32.1895 3.16583 38.5212 3.16583 42.4264 7.07108L63.6396 28.2843C67.5449 32.1895 67.5449 38.5212 63.6396 42.4264L42.4264 63.6396C38.5212 67.5449 32.1895 67.5449 28.2843 63.6396L7.07107 42.4264Z" fill="url(#paint0_linear_2_6)"/><path d="M35.7051 42.8711H35.7402C36.9824 42.8711 37.9375 42.6191 38.6055 42.1152C39.2852 41.5996 39.625 40.9023 39.625 40.0234C39.625 39.1328 39.3145 38.4238 38.6934 37.8965C38.084 37.3574 36.9824 36.8477 35.3887 36.3672C32.4941 35.5352 30.3789 34.5742 29.043 33.4844C27.7188 32.3828 27.0566 30.9062 27.0566 29.0547C27.0566 27.1914 27.8594 25.6621 29.4648 24.4668C31.0703 23.2715 33.127 22.6738 35.6348 22.6738C38.1543 22.6738 40.2109 23.3418 41.8047 24.6777C43.3984 26.002 44.166 27.666 44.1074 29.6699L44.0898 29.7578H39.6074C39.6074 28.668 39.2441 27.8008 38.5176 27.1562C37.8027 26.5117 36.8242 26.1895 35.582 26.1895C34.3398 26.1895 33.373 26.459 32.6816 26.998C32.002 27.5254 31.6621 28.2051 31.6621 29.0371C31.6621 29.8574 32.0078 30.5195 32.6992 31.0234C33.4023 31.5156 34.668 32.0488 36.4961 32.623C39.1094 33.3496 41.0488 34.2988 42.3145 35.4707C43.5918 36.6309 44.2305 38.166 44.2305 40.0762C44.2305 41.9863 43.457 43.5156 41.9102 44.6641C40.375 45.8008 38.3125 46.3691 35.7227 46.3691C34.0234 46.3691 32.4707 46.0879 31.0645 45.5254C29.6582 44.9512 28.5273 44.0957 27.6719 42.959C26.8164 41.8223 26.4004 40.5039 26.4238 39.0039L26.459 38.8984H30.9414C30.9414 41.5469 32.5293 42.8711 35.7051 42.8711Z" fill="white"/><defs><linearGradient id="paint0_linear_2_6" x1="17.6777" y1="17.6777" x2="53.033" y2="53.033" gradientUnits="userSpaceOnUse"><stop stop-color="#FEAC5E"/><stop offset="0.503125" stop-color="#C779D0"/><stop offset="1" stop-color="#4BC0C8"/></linearGradient></defs></svg></a></li>
       </ul>
       <ul class="right mono">
-        <li><i>01.</i><a href="#about">About</a></li>
-        <li><i>02.</i><a href="#experience">Experience</a></li>
-        <li><i>03.</i><a href="#contact">Contact</a></li>
-        <li><a href="/assets/docs/resume/resume.pdf" target="_blank" id="last">Resume</a></li>
+        <li><i>01.</i><a href="#about" class="pgLinks">About</a></li>
+        <li><i>02.</i><a href="#experience" class="pgLinks">Experience</a></li>
+        <li><i>03.</i><a href="#contact" class="pgLinks">Contact</a></li>
+        <li><a href="/assets/docs/resume/resume.pdf" target="_blank" class="pgLinks" id="last">Resume</a></li>
       </ul>
     </nav>
 
     <section class="head bg">
       <main class="landing">
         <div role="doc-subtitle">Hi, my name is</div>
-        <h1 class="myName"><a href="/assets/docs/resume/resume.pdf" target="_blank">Sergio Garcia Gallego</a></h1>
+        <h1 class="myName"><a href="/assets/docs/resume/resume.pdf" target="_blank">Sergio Garcia <span class="optional">Gallego</span></a></h1>
         <h2 class="myJob">and <span id="typewriter"></span><span class="blink"></span></h2>
         <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
         <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
       </main>
       <div class="inline">
         <ul class="social">
-          <li><a href="https://github.com/sgarciagallego" target="_blank"><img src="/assets/img/icon/icons8-github-50px.png" alt="GitHub account"></li>
-          <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><img src="/assets/img/icon/icons8-linkedin-50px.png" alt="LinkedIn account"></a></li>
-          <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><img src="/assets/img/icon/icons8-donate-50px.png" alt="Donations"></a></li>
-          <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><img src="/assets/img/icon/icons8-instagram-50px.png" alt="Instagram account"></a></li>
-          <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><img src="/assets/img/icon/icons8-twitter-50px.png" alt="Twitter account" id="last"></a></li>
+          <li><a href="https://github.com/sgarciagallego" target="_blank"><i class="uil uil-github-alt"></i></li>
+          <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><i class="uil uil-linkedin-alt"></i></a></li>
+          <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><i class="uil uil-gift"></i></a></li>
+          <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><i class="uil uil-instagram"></i></a></li>
+          <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><i class="uil uil-twitter-alt" id="last"></i></a></li>
         </ul>
       </div>
     </section>
@@ -116,7 +119,7 @@
     <a name="about"></a>
     <section class="about">
       <div class="heading">
-        <i>01.</i><h3>About Me</h3>
+        <i>01</i><h3>About Me</h3>
       </div>
       <div class="me">
         <div class="longDesc">
@@ -126,16 +129,15 @@
           <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
-            <li><img src="/assets/img/icon/icons8-html-5-50px.png" alt="HTMl5" title="HTML5"></li>
-            <li><img src="/assets/img/icon/icons8-css3-50px.png" alt="CSS3" title="CSS3"></li>
-            <li><img src="/assets/img/icon/icons8-sass-50px.png" alt="SASS" title="SASS"></li>
-            <li><img src="/assets/img/icon/icons8-javascript-50px.png" alt="JavaScript (ES6+)" title="JavaScript (ES6+)"></li>
-            <li><img src="/assets/img/icon/icons8-reactjs-50px.png" alt="React.js" title="React.js"></li>
-            <li><img src="/assets/img/icon/icons8-git-50px.png" alt="Git" title="Git"></li>
+            <li><i class="uil uil-html5-alt" title="HTML5"></i></li>
+            <li><i class="uil uil-css3-simple" title="CSS3"></i></li>
+            <li><i class="uil uil-code-branch" title="Git"></i></li>
+            <li><i class="uil uil-java-script" title="JavaScript(ES6)"></i></li>
+            <li><i class="uil uil-react" title="React"></i></li>
           </ul>
         </div>
         <div class="myPic">
-          <img src="/assets/img/myPic.jpg" alt="This is a Picture of me!">
+          <img src="/assets/img/myPic.png" alt="This is a Picture of me!">
         </div>
       </div>
     </section>
@@ -143,7 +145,7 @@
     <a name="experience"></a>
     <section class="experience">
       <div class="heading">
-        <i>02.</i><h3>Experience</h3>
+        <i>02</i><h3>Experience</h3>
       </div>
       <div class="timeline">
         <div class="card">
@@ -170,7 +172,7 @@
     <a name="contact"></a>
     <section class="contact">
       <div class="heading">
-        <i>03.</i><h3>Contact</h3>
+        <i>03</i><h3>Contact</h3>
       </div>
       <div class="contactForm">
         <div class="whyContact">
@@ -190,7 +192,7 @@
     </section>
 
     <footer class="allContact">
-      <p>Build & Design by <a href="mailto:gallegogarciasergio@gmail.com"><span class="copyright"></span> Sergio Garcia</a> | Icons  by <a href="https://icons8.com" target="_blank">Icons8</a></p>
+      <p>Build & Design by <a href="mailto:gallegogarciasergio@gmail.com"><span class="copyright"></span> Sergio Garcia Gallego</a></p>
     </footer>
 
     <!-- TypeWriter JS -->
