--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Viewports -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> 
 
     <!-- For the Bots -->
     <meta name="robots" content="index, follow" />
