--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
         <div role="doc-subtitle">Hi, my name is</div>
         <h1 class="myName"><a href="/assets/docs/resume/resume.pdf" target="_blank">Sergio Garcia <span class="optional">Gallego</span></a></h1>
         <h2 class="myJob">and <span id="typewriter"></span><span class="blink"></span></h2>
-        <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink"> PurpleBeard Training</a> with the vision of making IT apprenticeships & training more accessible.</p>
-        <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust</a>, working tirelessly to save the wildlife & ecosystem.</p>
+        <p class="myDesc">An ambitious UK-based 18 year old Junior Frontend Developer with 1.5 years of experience. Currently working at <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink">PurpleBeard Training <i class="uil uil-external-link-alt"></i></a> with the vision of making IT apprenticeships & training more accessible.</p>
+        <p class="myDonations">If you enjoy this web experience, consider donating to a cause I hold dear to my heart, the <a href="https://www.rainforesttrust.org" target="_blank" class="outLink">Rainforest Trust <i class="uil uil-external-link-alt"></i></a>, working tirelessly to save the wildlife & ecosystem.</p>
       </main>
       <div class="inline">
         <ul class="social">
-          <li><a href="https://github.com/sgarciagallego" target="_blank"><i class="uil uil-github-alt"></i></li>
-          <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><i class="uil uil-linkedin-alt"></i></a></li>
-          <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><i class="uil uil-gift"></i></a></li>
-          <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><i class="uil uil-instagram"></i></a></li>
+          <li><a href="https://github.com/sgarciagallego" target="_blank"><i class="uil uil-github-alt" id="github"></i></li>
+          <li><a href="https://www.linkedin.com/in/sgarciagallego/" target="_blank"><i class="uil uil-linkedin-alt" id="linkedin"></i></a></li>
+          <li><a href="https://www.rainforesttrust.org/?form=FUNBUNYXEWL" target="_blank"><i class="uil uil-gift" id="donate"></i></a></li>
+          <li><a href="https://www.instagram.com/s_garciagallego/" target="_blank"><i class="uil uil-instagram" id="instagram"></i></a></li>
           <li><a href="https://twitter.com/mrgarciagallego" target="_blank"><i class="uil uil-twitter-alt" id="last"></i></a></li>
         </ul>
       </div>
@@ -119,21 +119,21 @@
     <a name="about"></a>
     <section class="about">
       <div class="heading">
-        <i>01</i><h3>About Me</h3>
+        <i>01.</i><h3>About Me</h3>
       </div>
       <div class="me">
         <div class="longDesc">
           <p>Hey there <span class="eWave"></span> I'm Sergio, & my passion lies in tech, preferably where design & UX is involved.</p>
           <p>My magnet towards computing began at a young age, when the only way for me to install Minecraft was through a battered laptop running Fedora Linux 18. The challenge of using Xterm to install any application taunted me to learn more I guess.</p>
-          <p>Fast forward to 2022, and I have had the pleasure to work at <a href="https://vasaveop.com/" target="_blank" rel="noreferrer" class="outLink">a tech start-up</a> and have allowed the opportunity for a bit of <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer" class="outLink">freelancing</a> as well.</p>
-          <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink">gov.uk training provider</a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
+          <p>Fast forward to 2022, and I have had the pleasure to work at <a href="https://vasaveop.com/" target="_blank" rel="noreferrer" class="outLink">a tech start-up <i class="uil uil-external-link-alt"></i></a> and have allowed the opportunity for a bit of <a href="https://meghdhara.co.uk" target="_blank" rel="noreferrer" class="outLink">freelancing <i class="uil uil-external-link-alt"></i></a> as well.</p>
+          <p>Come present day I am now working for a <a href="https://purplebeard.co.uk/" target="_blank" rel="noreferrer" class="outLink">gov.uk training provider <i class="uil uil-external-link-alt"></i></a>. It has been a real rollercoaster for the time I've been in the industry, & I can't wait to see what comes next!</p>
           <p>Here are a few technologies I have been using daily:</p>
           <ul class="techSkills">
-            <li><i class="uil uil-html5-alt" title="HTML5"></i></li>
-            <li><i class="uil uil-css3-simple" title="CSS3"></i></li>
-            <li><i class="uil uil-code-branch" title="Git"></i></li>
-            <li><i class="uil uil-java-script" title="JavaScript(ES6)"></i></li>
-            <li><i class="uil uil-react" title="React"></i></li>
+            <li><i class="uil uil-html5-alt" title="HTML5" id="html5"></i></li>
+            <li><i class="uil uil-css3-simple" title="CSS3" id="css3"></i></li>
+            <li><i class="uil uil-code-branch" title="Git" id="git"></i></li>
+            <li><i class="uil uil-java-script" title="JavaScript(ES6)" id="js"></i></li>
+            <li><i class="uil uil-react" title="React" id="react"></i></li>
           </ul>
         </div>
         <div class="myPic">
@@ -145,7 +145,7 @@
     <a name="experience"></a>
     <section class="experience">
       <div class="heading">
-        <i>02</i><h3>Experience</h3>
+        <i>02.</i><h3>Experience</h3>
       </div>
       <div class="timeline">
         <div class="card">
@@ -172,7 +172,7 @@
     <a name="contact"></a>
     <section class="contact">
       <div class="heading">
-        <i>03</i><h3>Contact</h3>
+        <i>03.</i><h3>Contact</h3>
       </div>
       <div class="contactForm">
         <div class="whyContact">
