--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Viewports -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" /> 
 
     <!-- For the Bots -->
     <meta name="robots" content="index, follow" />
@@ -45,11 +46,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#FBAA64">
     <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileColor" content="#FFF">
     <meta name="msapplication-config" content="/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#FFF">
 
     <!-- Site Author -->
     <meta name="author" content="Sergio Garcia Gallego">
