--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Viewports -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" /> 
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="black-translucent" /> 
 
     <!-- For the Bots -->
     <meta name="robots" content="index, follow" />
